--- a/.github/workflows/build-itpipes-connect.yml
+++ b/.github/workflows/build-itpipes-connect.yml
@@ -50,4 +50,4 @@ jobs:
     ############################################################################################################################
     - name: Echo Check Labels PR Result
       id: echo-check-pr-labels-results
-      run: echo "Has BuildITpipesConnect label: ${{ steps.check-pr-labels.outputs.hasLabel }}"
+      run: echo "${{ steps.check-pr-labels.outputs.hasLabel }}"
