--- a/.github/workflows/build-itpipes-connect.yml
+++ b/.github/workflows/build-itpipes-connect.yml
@@ -12,7 +12,7 @@ jobs:
       run: echo "Running Test..."
 
     - name: Save Version
-      run: echo "APP_VERSION_NUMBER=1.0.5" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+      run: echo "APP_VERSION_NUMBER=1.0.5" >> $GITHUB_ENV
 
     - name: Create .ini file
       run: |
