--- a/.github/workflows/build-itpipes-connect.yml
+++ b/.github/workflows/build-itpipes-connect.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - 'connect/AssemblyInfo.txt'
+      - 'connect/AssemblyInfo.cs'
 
 jobs:
   ############################################################################################################################
