--- a/.github/workflows/build-itpipes-connect.yml
+++ b/.github/workflows/build-itpipes-connect.yml
@@ -22,6 +22,7 @@ jobs:
       id: filter
       uses: dorny/paths-filter@v3
       with:
+        base: ${{ github.ref }}
         filters: |
           connect:
             - 'connect/AssemblyInfo.txt'
