--- a/.github/workflows/build-itpipes-connect.yml
+++ b/.github/workflows/build-itpipes-connect.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: 
     # paths:
     #   - 'connect/AssemblyInfo.cs'
 
@@ -17,3 +18,4 @@ jobs:
         shell: pwsh
         run: |
           Write-Host "Branch Name: $env:GITHUB_REF_NAME"
+
